[package]
name = "rust-gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.1"
serde={version="1.0.136", features=["derive"]}
aws-sdk-s3 = "0.9.0"
bytes = "1.1.0"

[[bin]]
name = "rust-gallery"
path = "src/main.rs"
