[package]
name = "rust-gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.1"
serde={version="1.0.136", features=["derive"]}
aws-sdk-s3 = "0.9.0"
aws-config = "0.9.0"
bytes = "1.1.0"
aws-types = {version="0.9.0", features=["hardcoded-credentials"]}
tokio = {version="1.17.0", features=["full"]}
aws-smithy-http = "0.39.0"
http = "0.2.6"
rust-s3 = {version="0.28.0", features=["default"]}
anyhow = "1.0.56"
axum = {version="0.5.1", features=["multipart"]}

[[bin]]
name = "rust-gallery"
path = "src/main.rs"
